--- a/1. Variabili, stringhe e numeri.ipynb
+++ b/1. Variabili, stringhe e numeri.ipynb
@@ -23,11 +23,11 @@
    "source": [
     "Info\n",
     "---\n",
-    "A prescindere dall'applicazione, programmare è un'abilità molto utile. **Python** è linguaggio immediato e divertente per iniziare. Inoltre, Python è un ottimo linguaggio per lavorare con i dati: [Python Data Science Handbook](https://jakevdp.github.io/PythonDataScienceHandbook/index.html) e [Introduction to Machine Learning with Python](https://drive.google.com/file/d/19lqIILSWwidDsFkYEUDoxtC9WEgNMgWi/view?usp=sharing) sono due ottimi libri per imparare Python nel contesto della Data Science.\n",
+    "A prescindere dall'applicazione, programmare è un'abilità molto utile, e **Python** è il linguaggio perfetto per iniziare. \n",
     "\n",
-    "**Anaconda** è una distribuzione di Python pensata per la Data Science: https://www.anaconda.com/distribution/.\n",
+    "Inoltre, Python è un ottimo linguaggio per lavorare con i dati. [Python Data Science Handbook](https://jakevdp.github.io/PythonDataScienceHandbook/index.html) è un buon libro per imparare Python nel contesto della Data Science. [**Anaconda**](https://www.anaconda.com/download) è una distribuzione di Python pensata per la Data Science, ed è quella che consiglio di [installare](https://docs.anaconda.com/free/anaconda/install/index.html).\n",
     "\n",
-    "**Jupyter** (https://jupyter.org/) è una delle *librerie* Python che troviamo dentro Anaconda. Oltre ad essere un *ambiente di sviluppo* interattivo, incredibilmente efficiente nella prototipazione di idee e algoritmi, è molto comodo per realizzare presentazioni a carattere scientifico. Queste lezioni sono realizzate con Jupyter. Ciascun file Jupyter è detto *notebook*, e ha estensione .ipynb."
+    "Queste lezioni sono realizzate con [**Jupyter**](https://jupyter.org/), che troviamo dentro Anaconda. Oltre ad essere un *ambiente di sviluppo* interattivo, molto efficiente nella prototipazione di idee e algoritmi, è uno strumento utile per realizzare presentazioni a carattere scientifico."
    ]
   },
   {
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +157,7 @@
        "'ciao, mondo!'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,30 +170,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ogni cella funziona come un terminale interattivo. Eseguendo la cella qui sopra sto chiedendo a Jupyter *qual è il valore della variabile a*? Si può usare questa sintassi in alternativa alla funzione print. In queste lezioni userò entrambi i costrutti."
+    "Ogni cella funziona come un terminale interattivo. Eseguendo la cella qui sopra sto chiedendo a Jupyter *qual è il valore della variabile a*?\n",
+    "\n",
+    "Si può usare questa sintassi in alternativa alla funzione print. In queste lezioni userò entrambi i costrutti."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Jupyter dà la possibilità di conoscere tutte le variabili memorizzate attraverso il comando\n",
+    "Jupyter dà la possibilità di conoscere, in ogni momento, tutte le variabili che sono state dichiarate. Per questo si usa il comando\n",
     "\n",
     "        %whos"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Variable   Type    Data/Info\n",
-      "----------------------------\n",
-      "a          str     ciao, mondo!\n"
+      "Variable   Type     Data/Info\n",
+      "-----------------------------\n",
+      "a          str      ciao, mondo!\n",
+      "b          int      1\n",
+      "c          float    1.1\n",
+      "d          list     n=0\n"
      ]
     }
    ],
@@ -207,12 +212,12 @@
    "source": [
     "Qualche tipo: stringhe e numeri\n",
     "---\n",
-    "Python intuisce da solo di che *tipo* è una variabile, in base a come questa viene dichiarata. Ci sono diversi tipi di variabili, e il programmatore può definirne di nuovi."
+    "Python intuisce di che *tipo* è una variabile in base a come questa viene dichiarata. Ci sono diversi tipi di variabili, e il programmatore può definirne di nuovi."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +226,7 @@
        "str"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +248,7 @@
        "int"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +270,7 @@
        "float"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -278,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +292,7 @@
        "list"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -300,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -331,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +345,7 @@
        "'ciao mamma!'"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -353,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +367,7 @@
        "'ciao mamma!'"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -382,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +396,7 @@
        "'francesco'"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -403,19 +408,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Nota**: per invocare la funzione lower sto usando la sintassi\n",
-    "\n",
-    "        variabile.funzione()\n",
-    "        \n",
-    "Cosa c'è di diverso rispetto a print?"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -424,7 +418,7 @@
        "'FRANCESCO'"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -435,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -444,7 +438,7 @@
        "'Francesca'"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -455,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -464,7 +458,7 @@
        "'Francesca'"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -484,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -495,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -504,7 +498,7 @@
        "'Ciao mamma, guarda come mi diverto'"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -519,12 +513,12 @@
    "source": [
     "### Numeri: interi e float\n",
     "\n",
-    "*int* (numeri interi) e *float* (numeri decimali) sono altri due tipi *built-in* di Python. "
+    "*int* (numeri interi) e *float* (numeri decimali) sono altri due tipi standard di Python. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -533,7 +527,7 @@
        "2.0"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -555,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -564,7 +558,7 @@
        "float"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -582,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -591,7 +585,7 @@
        "25"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -602,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -611,7 +605,7 @@
        "30"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -636,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -655,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -677,12 +671,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Un'alternativa comoda è utilizzare i *segnaposto* e la funzione *format*."
+    "Un'alternativa è utilizzare i *segnaposto* e la funzione *format*."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -704,12 +698,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Il costrutto qui sopra è utile se si vuole specificare un formato di stampa."
+    "Questo è utile se si vuole specificare un formato di stampa."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -729,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -749,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -758,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -767,7 +761,7 @@
        "'Il risultato di 10 diviso 3 è 3.33'"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -792,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -813,7 +807,7 @@
     "</script>\n",
     "\n",
     "<footer id=\"attribution\" style=\"float:right; color:#999; background:#fff;\">\n",
-    "Created with Jupyter, delivered by Fastly, rendered by Rackspace.\n",
+    "Created with Jupyter.\n",
     "</footer>"
    ]
   }
