--- a/2. Funzioni.ipynb
+++ b/2. Funzioni.ipynb
@@ -18,7 +18,7 @@
    "source": [
     "Funzioni\n",
     "===\n",
-    "Spesso, quando si scrive codice, una certa sequenza di azioni viene utilizzata molte volte, magari con piccole differenze di contesto.\n",
+    "Spesso, quando si scrive codice, una certa sequenza di azioni viene utilizzata molte volte con piccole differenze di contesto.\n",
     "\n",
     "Una *funzione* è una sequenza di azioni a cui si dà un nome, e che si può invocare all'occorrenza. Abbiamo già visto ed usato alcune funzioni, sia generiche (come print) che definite sul tipo stringa (upper, lower, replace, format)."
    ]
@@ -52,7 +52,7 @@
     "\n",
     "- **def** è una keyword del linguaggio, ne vedremo altre\n",
     "- *function_name* è il nome della funzione, da usare al momento della chiamata\n",
-    "- *argument_1* e *argument_2* sono detti *argomenti*, sono ordinati e possono essere tanti a piacere"
+    "- *argument_1* e *argument_2* sono detti *argomenti*; sono ordinati e possono essere tanti a piacere"
    ]
   },
   {
@@ -62,12 +62,12 @@
     "Ordine delle chiamate\n",
     "---\n",
     "\n",
-    "Una funzione può chiamarne un'altra: è così che funzionano tutti i programmi complessi. L'ordine delle chiamate durante l'esecuzione è salvato nella *stack trace*: https://en.wikipedia.org/wiki/Stack_trace."
+    "Una funzione può chiamarne un'altra: è così che funzionano tutti i programmi complessi. L'ordine delle chiamate durante l'esecuzione è salvato nella [*stack trace*](https://en.wikipedia.org/wiki/Stack_trace)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,12 +115,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Come per le variabili, una funzione dichiarata in una cella può essere chiamata in qualsiasi cella del notebook."
+    "Come per le variabili, una funzione dichiarata in una cella può essere chiamata anche in qualsiasi altra cella del notebook."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +136,7 @@
        "50"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +172,7 @@
        "1000"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -197,7 +197,7 @@
     "</script>\n",
     "\n",
     "<footer id=\"attribution\" style=\"float:right; color:#999; background:#fff;\">\n",
-    "Created with Jupyter, delivered by Fastly, rendered by Rackspace.\n",
+    "Created with Jupyter.\n",
     "</footer>"
    ]
   }
