--- a/5. Dizionari.ipynb
+++ b/5. Dizionari.ipynb
@@ -7,13 +7,13 @@
     "*Contenuti*\n",
     "===\n",
     "- [Un database di immobili](#Un-database-di-immobili)\n",
-    "    - [Dizionari: definizione e sintassi](#Dizionari:-definizione-e-sintassi)\n",
-    "    - [Accesso](#Accesso)\n",
-    "    - [Operazioni su dizionario](#Operazioni-su-dizionario)\n",
-    "    - [Ciclo sugli elementi di un dizionario](#Ciclo-sugli-elementi-di-un-dizionario)\n",
-    "    - [*Esercizio 1*](#Esercizio-1)\n",
-    "    - [*Esercizio 2*](#Esercizio-2)\n",
-    "    - [*Esercizio 3*](#Esercizio-3)"
+    "- [Dizionari: definizione e sintassi](#Dizionari:-definizione-e-sintassi)\n",
+    "- [Accesso](#Accesso)\n",
+    "- [Operazioni su dizionario](#Operazioni-su-dizionario)\n",
+    "- [Ciclo sugli elementi di un dizionario](#Ciclo-sugli-elementi-di-un-dizionario)\n",
+    "- [*Esercizio 1*](#Esercizio-1)\n",
+    "- [*Esercizio 2*](#Esercizio-2)\n",
+    "- [*Esercizio 3*](#Esercizio-3)"
    ]
   },
   {
@@ -29,9 +29,7 @@
     "- presenza di terreno\n",
     "- prezzo, in migliaia di Euro\n",
     "\n",
-    "Possiamo realizzare il database come una lista. A sua volta, ogni immobile sarà una lista di informazioni.\n",
-    "\n",
-    "Immaginiamo che il database sia inizialmente vuoto, e che venga popolato di un nuovo record ogni volta che un immobile viene registrato (per esempio, attraverso il form di un applicativo)."
+    "Possiamo realizzare il database come una lista. A sua volta, ogni immobile sarà una lista di informazioni. Immaginiamo anche che il database sia inizialmente vuoto, e che venga popolato di un nuovo record ogni volta che un immobile viene registrato (per esempio, attraverso il form di un applicativo)."
    ]
   },
   {
@@ -88,7 +86,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Quando le informazioni di un immobile sono tante, però, gestirle in questo modo diventa scomodo. Infatti per accedere ad una proprietà dell'immobile dobbiamo saperne la posizione nella lista."
+    "Quando le informazioni di un immobile sono tante, però, gestirle in questo modo diventa scomodo. Per accedere ad una proprietà dell'immobile, infatti, dobbiamo conoscerne la posizione nella lista."
    ]
   },
   {
@@ -96,9 +94,9 @@
    "metadata": {},
    "source": [
     "Dizionari: definizione e sintassi\n",
-    "---\n",
+    "===\n",
     "\n",
-    "Un *dizionario* è un contenitore speciale in cui ogni elemento ha una *chiave* (cioè un identificatore univoco) e un *valore*. A differenza di una lista, associa quindi una semantica ai suoi elementi: ciascuno di questi avrà un significato proprio e univoco."
+    "Un *dizionario* è un contenitore speciale in cui ogni elemento ha una *chiave* (cioè un identificatore univoco) e un *valore*. A differenza di una lista, associa quindi una semantica ai suoi elementi."
    ]
   },
   {
@@ -116,10 +114,10 @@
    "source": [
     "Il codice qui sopra è un esempio generale di come si dichiara un dizionario. \n",
     "\n",
+    "- usiamo le parentesi graffe per dichiarare un dizionario\n",
     "- le coppie (chiave, valore) possono essere tante a piacere\n",
     "- una chiave non può essere ripetuta: per esempio, ciascun immobile avrà un solo prezzo, una sola metratura, ...\n",
-    "- i valori possono essere qualsiasi cosa (inclusi liste e altri dizionari)\n",
-    "- un dizionario si dichiara con le parentesi graffe.\n",
+    "- i valori possono essere qualsiasi cosa (inclusi liste e altri dizionari).\n",
     "\n",
     "Tornando al nostro esempio, possiamo gestire il database di utenti come una lista di dizionari."
    ]
@@ -170,8 +168,8 @@
    "metadata": {},
    "source": [
     "Accesso\n",
-    "---\n",
-    "Adesso possiamo accedere alle informazioni degli immobili in modo più compatto e leggibile, utilizzando la chiave che identifica un campo per ottenere il valore corrispondente."
+    "===\n",
+    "Adesso possiamo accedere alle informazioni degli immobili in modo più compatto e leggibile, utilizzando una chiave per ottenere il valore corrispondente."
    ]
   },
   {
@@ -265,10 +263,10 @@
    "metadata": {},
    "source": [
     "Operazioni su dizionario\n",
-    "---\n",
+    "===\n",
     "Come abbiamo fatto per le liste, vediamo le operazioni di base che si possono fare su un dizionario.\n",
     "\n",
-    "Cambiamo contesto applicativo. Un'agenzia immobiliare affitta appartamenti in una località marittima. Ciascun appartamento ha un nome univoco e un prezzo settimanale, e l'agenzia vuole un database che tenga traccia di queste due informazioni.\n",
+    "Cambiamo contesto applicativo. Un'agenzia immobiliare affitta appartamenti in una località marittima. Ciascun appartamento ha un nome univoco e un prezzo settimanale, e l'agenzia desidera costruire un database che tenga traccia di queste due informazioni.\n",
     "\n",
     "Di quanti dizionari ho bisogno?"
    ]
@@ -347,7 +345,7 @@
    "metadata": {},
    "source": [
     "Ciclo sugli elementi di un dizionario\n",
-    "---\n",
+    "===\n",
     "Attraverso la funzione *items* si accede alle coppie (chiave, valore) di un dizionario."
    ]
   },
@@ -422,7 +420,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Per convenzione, l'ordinamento è (alfabetico) per chiave. E' comunque possibile ordinare per valore: https://stackoverflow.com/questions/613183/how-do-i-sort-a-dictionary-by-value."
+    "Per convenzione, l'ordinamento è (alfabetico) per chiave. E' comunque [possibile](https://stackoverflow.com/questions/613183/how-do-i-sort-a-dictionary-by-value) ordinare per valore."
    ]
   },
   {
@@ -470,7 +468,7 @@
    "metadata": {},
    "source": [
     "*Esercizio 1*\n",
-    "---\n",
+    "===\n",
     "Su https://en.wikipedia.org/wiki/List_of_mountains_by_elevation trovate l'elenco delle montagne più alte del mondo.\n",
     "\n",
     "- costruire una struttura dati *heights* che, per ognuna delle 5 montagne più alte, permetta di accedere all'altezza a partire dal nome\n",
@@ -495,7 +493,7 @@
    "metadata": {},
    "source": [
     "*Esercizio 2*\n",
-    "---\n",
+    "===\n",
     "Utilizzando il link dell'esercizio precedente,\n",
     "\n",
     "- costruire un database *mountains* con le prime 5 montagne più alte\n",
@@ -520,7 +518,7 @@
    "metadata": {},
    "source": [
     "*Esercizio 3*\n",
-    "---\n",
+    "===\n",
     "Seguendo [quanto fatto in precedenza](#Dizionari:-definizione-e-sintassi), costruire un database di immobili con dati e proprietà a piacere.\n",
     "\n",
     "Definire una funzione che prenda in ingresso un singolo immobile e ne stampi le informazioni, come [visto qui sopra](#Accesso).\n",
@@ -544,7 +542,7 @@
     "</script>\n",
     "\n",
     "<footer id=\"attribution\" style=\"float:right; color:#999; background:#fff;\">\n",
-    "Created with Jupyter, delivered by Fastly, rendered by Rackspace.\n",
+    "Created with Jupyter.\n",
     "</footer>"
    ]
   }
