--- a/4. Condizioni, valori e operatori booleani.ipynb
+++ b/4. Condizioni, valori e operatori booleani.ipynb
@@ -111,7 +111,7 @@
    "source": [
     "*elif*\n",
     "---\n",
-    "Se vogliamo testare una serie di condizioni (piuttosto che una del tipo *'A o non A'* ) utilizziamo *elif*, contrazione di else e if."
+    "Se vogliamo testare una serie di condizioni (piuttosto che una del tipo *A o non A*) utilizziamo *elif*, contrazione di \"else if\"."
    ]
   },
   {
@@ -137,7 +137,7 @@
     "for element in mixed_list:\n",
     "    \n",
     "    if type(element) == str:\n",
-    "        print(element, 'è di tipo stringa')#corpo dell'azione in una sola riga\n",
+    "        print(element, 'è di tipo stringa')\n",
     "        \n",
     "    elif type(element) == int:\n",
     "        print(element, 'è di tipo intero')\n",
@@ -153,7 +153,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Nel costrutto if-elif-else si può usare un solo else, che viene eseguito solo quando tutte le altre condizioni (testate da if ed elif) falliscono. Se una della condizioni testate si verifica, quelle successive vengono ignorate."
+    "Nel costrutto if-elif-else l'unico else viene eseguito solo quando tutte le altre condizioni (testate da if ed elif) falliscono. Se una della condizioni testate si verifica, quelle successive vengono ignorate."
    ]
   },
   {
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +176,7 @@
        "['ciao', 5, 4.7, 'mamma', [4, 5, 6]]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,7 +184,7 @@
    "source": [
     "mixed_list = ['ciao', 5, 4.7, 'mamma', [4,5,6]]\n",
     "\n",
-    "[x for x in mixed_list]#lista derivata da (e uguale ad) una di partenza"
+    "[x for x in mixed_list]#lista derivata da (e uguale a) una di partenza"
    ]
   },
   {
@@ -204,7 +204,7 @@
     }
    ],
    "source": [
-    "strings_only = [x for x in mixed_list if type(x) == str]#solo le stringhe!\n",
+    "strings_only = [x for x in mixed_list if type(x) == str]#solo le stringhe\n",
     "\n",
     "strings_only"
    ]
@@ -215,12 +215,12 @@
    "source": [
     "Test logici\n",
     "===\n",
-    "Le condizioni testate da if ed elif sono vere (*True*) o false (*False*). In Python, la risposta al test di una condizione è di tipo *booleano*. Vediamo alcuni esempi."
+    "Le condizioni testate da if ed elif possono essere vere (*True*) o false (*False*). In Python, la risposta al test di una condizione è di tipo *booleano*. Vediamo qualche esempio."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +229,7 @@
        "False"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,7 @@
        "bool"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +272,7 @@
        "bool"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -292,7 +292,7 @@
        "bool"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +312,7 @@
        "True"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +334,7 @@
        "False"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -354,7 +354,7 @@
        "True"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -374,7 +374,7 @@
        "True"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +396,7 @@
        "False"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -427,7 +427,7 @@
        "True"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -449,7 +449,7 @@
        "False"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -471,7 +471,7 @@
        "False"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -491,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -500,7 +500,7 @@
        "True"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -513,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -522,7 +522,7 @@
        "True"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -535,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -544,7 +544,7 @@
        "False"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -564,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -573,7 +573,7 @@
        "True"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -586,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -611,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -620,7 +620,7 @@
        "True"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -628,79 +628,6 @@
    "source": [
     "number = 5\n",
     "number < 10 and not number % 2 == 0"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Booleani e interi\n",
-    "==="
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Per Python, gli interi 0 e 1 hanno anche significato booleano: indicano rispettivamente False e True."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "1 == True"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "0 == False"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Ciao!\n"
-     ]
-    }
-   ],
-   "source": [
-    "if 1:\n",
-    "    print('Ciao!')"
    ]
   },
   {
@@ -722,21 +649,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Il quadrato di 3 è 9, che è multiplo di 3 ma non di 2\n",
-      "Il quadrato di 6 è 36, che è multiplo sia di 2 che di 3\n",
-      "Il quadrato di 5 è 25, che non è multiplo né di 2 né di 3\n",
-      "Il quadrato di 8 è 64, che è multiplo di 2 ma non di 3\n",
-      "Il quadrato di 12 è 144, che è multiplo sia di 2 che di 3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "lst = [3,6,5,8,12]\n",
     "\n",
@@ -757,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -780,7 +695,7 @@
     "</script>\n",
     "\n",
     "<footer id=\"attribution\" style=\"float:right; color:#999; background:#fff;\">\n",
-    "Created with Jupyter, delivered by Fastly, rendered by Rackspace.\n",
+    "Created with Jupyter.\n",
     "</footer>"
    ]
   }
