--- a/3. Liste, cicli e comprensioni.ipynb
+++ b/3. Liste, cicli e comprensioni.ipynb
@@ -942,7 +942,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Cicli ***for***\n",
+    "Cicli **for**\n",
     "===\n",
     "Nella programmazione, un *ciclo* è un costrutto in cui una o più operazioni sono eseguite più volte.\n",
     "\n",
