--- a/6. NumPy.ipynb
+++ b/6. NumPy.ipynb
@@ -1740,7 +1740,7 @@
     "</script>\n",
     "\n",
     "<footer id=\"attribution\" style=\"float:right; color:#999; background:#fff;\">\n",
-    "Created with Jupyter, delivered by Fastly, rendered by Rackspace.\n",
+    "Created with Jupyter.\n",
     "</footer>"
    ]
   }
