--- a/7. Scikit-learn.ipynb
+++ b/7. Scikit-learn.ipynb
@@ -19,9 +19,8 @@
     "    - [Dai dati alla predizione](#Dai-dati-alla-predizione)\n",
     "        - [*Esercizio 3*](#Esercizio-3)        \n",
     "    - [Validazione](#Validazione)\n",
-    "        - [*Esercizio 4*](#Esercizio-4)\n",
     "    - [Alberi di decisione](#Alberi-di-decisione)\n",
-    "        - [*Esercizio 5*](#Esercizio-5)"
+    "        - [*Esercizio 4*](#Esercizio-4)"
    ]
   },
   {
@@ -36,13 +35,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Scikit-learn* (o *sklearn*) è uno dei principali strumenti Python per il machine learning, ed è la libreria open-source di data science più usata al mondo.\n",
+    "*Scikit-learn* (o *sklearn*) è uno dei principali strumenti Python per il machine learning, ed è una delle librerie open-source di data science più usate al mondo.\n",
     "\n",
-    "Sulla [pagina di sklearn](http://scikit-learn.org/stable/) si trovano svariati modelli di machine learning, insieme a strumenti di preprocessing, analisi e visualizzazione dei dati. \n",
+    "Sul [sito](http://scikit-learn.org/stable/) si trovano svariati modelli di machine learning, insieme a strumenti di preprocessing, analisi e visualizzazione dei dati. \n",
     "\n",
-    "Ciascuna implementazione fa riferimento ad una [guida utente](https://scikit-learn.org/stable/user_guide.html#user-guide) molto dettagliata, che associa al codice la teoria necessaria per capirlo ed usarlo.\n",
-    "\n",
-    "Oltre a permettere di *usare* il machine learning scrivendo pochissime righe di codice, la libreria è altamente modulare e dà la possibilità agli utenti di costruire la propria implementazione basandosi su funzioni, oggetti ed interfacce esistenti.\n",
+    "Ciascuna implementazione fa riferimento ad una [guida utente](https://scikit-learn.org/stable/user_guide.html#user-guide) molto dettagliata, che associa al codice la teoria necessaria per capirlo e usarlo.\n",
     "\n",
     "Teoria e codice sono spesso supportati da [esempi pratici](http://scikit-learn.org/stable/auto_examples/)."
    ]
@@ -54,15 +51,11 @@
     "Il dataset *iris*\n",
     "---\n",
     "\n",
-    "Iniziamo sfruttando i *toy dataset* messi a disposizione dalla libreria. Il modulo *datasets* ne contiene diversi.\n",
-    "\n",
-    "Un *modulo* è un insieme di oggetti e funzioni con caratteristiche comuni, impacchettati insieme.\n",
-    "\n",
-    "Se, dopo averlo importato, scriviamo\n",
+    "Iniziamo sfruttando i *toy dataset* messi a disposizione dalla libreria. Il modulo *datasets* ne contiene diversi. Se, dopo averlo importato, scriviamo\n",
     "\n",
     "                datasets.\n",
     "                \n",
-    "e premiamo il tasto di autocomplemento, possiamo dare un'occhiata a cosa c'è nel modulo."
+    "e premiamo il tasto di autocomplemento, possiamo dare un'occhiata a cosa offre."
    ]
   },
   {
@@ -80,7 +73,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Attraverso la funzione *load_iris* abbiamo caricato dentro una variabile un intero dataset. L'oggetto così creato sarà simile ad un dizionario (Lezione 5), cioè ad un insieme di coppie chiave/valore.\n",
+    "Attraverso la funzione *load_iris* abbiamo caricato dentro una variabile un intero dataset. L'oggetto così creato sarà simile a un dizionario (Lezione 5), cioè a un insieme di coppie chiave/valore.\n",
     "\n",
     "Dati ed etichette sono associati rispettivamente alle chiavi *data* e *target*."
    ]
@@ -239,7 +232,7 @@
    "source": [
     "Feature scaling\n",
     "---\n",
-    "Come si vede dalla descrizione, le feature non sono definite sullo stesso intervallo. Per esempio, i valori minimi di *sepal_lenght* (4.3) e di *petal_width* (0.1) hanno diversi ordini di grandezza."
+    "Come si vede dalla descrizione di iris, le feature hanno ordini di grandezza diversi."
    ]
   },
   {
@@ -247,7 +240,7 @@
    "metadata": {},
    "source": [
     "### *Esercizio 2*\n",
-    "Estrarre, per ogni feature del dataset iris, i valori minimo e massimo osservati sul training set (controllare che siano uguali a quelli della descrizione)."
+    "Estrarre, per ogni feature del dataset iris, i valori minimo e massimo osservati sul training set (e controllare che siano uguali a quelli della descrizione)."
    ]
   },
   {
@@ -326,7 +319,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Come è stato ordinato il dataset?"
+    "Come sono stati ordinati gli esempi del dataset?"
    ]
   },
   {
@@ -359,7 +352,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Mischiamo (coerentemente!) i dati in modo casuale con la funzione *shuffle*."
+    "Mescoliamo (coerentemente!) i dati con la funzione *shuffle*."
    ]
   },
   {
@@ -397,7 +390,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Prendiamo i primi due terzi dei dati mischiati (100) per l'addestramento e i restanti (50) per il test."
+    "Prendiamo i primi due terzi dei dati mescolati (100) per l'addestramento e i restanti (50) per il test."
    ]
   },
   {
@@ -458,25 +451,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "KNeighborsClassifier(algorithm='auto', leaf_size=30, metric='minkowski',\n",
-      "           metric_params=None, n_jobs=None, n_neighbors=5, p=2,\n",
-      "           weights='uniform')\n"
+      "KNeighborsClassifier()\n"
      ]
     }
    ],
    "source": [
     "from sklearn.neighbors import KNeighborsClassifier as KNN\n",
     "\n",
-    "model = KNN()\n",
-    "\n",
-    "print(model)"
+    "model = KNN()"
    ]
   },
   {
@@ -486,8 +475,7 @@
     "Abbiamo invocato una funzione speciale, chiamata *costrutture*, che inizializza (in questo caso senza parametri) un classificatore KNN. Possiamo vedere\n",
     "\n",
     "- dalla [documentazione](http://scikit-learn.org/stable/modules/generated/sklearn.neighbors.KNeighborsClassifier.html)\n",
-    "- posizionando il puntatore del mouse dentro le parentesi del costruttore e premendo Shift e due volte Tab\n",
-    "- stampando l'oggetto creato,\n",
+    "- oppure posizionando il puntatore del mouse dentro le parentesi del costruttore e premendo Shift e due volte Tab,\n",
     "\n",
     "che questa funzione prende in ingresso diversi parametri, nessuno dei quali obbligatorio. Per esempio, il numero di vicini $k$ (chiamato *n_neighbors*) vale di default 5.\n",
     "\n",
@@ -834,18 +822,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### *Esercizio 4*\n",
-    "\n",
-    "Una volta scelto il valore dei parametri, una pratica comune è utilizzare *tutti* i dati del training set (anche quelli usati per la validazione) per un nuovo addestramento.\n",
-    "\n",
-    "- ricomporre $X_{train}$ e $y_{train}$ a partire da $X_{tr}$, $X_{val}$, $y_{tr}$ e $y_{val}$ e usarli per addestrare KNN con $k=3$\n",
-    "- confrontare l'accuratezza con quella ottenuta qui sopra: ci abbiamo guadagnato qualcosa ad usare tutti i dati per l'addestramento finale?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "Alberi di decisione\n",
     "---\n",
     "Costruiamo adesso un *albero di decisione* (DT) ed utilizziamolo per la classificazione."
@@ -853,28 +829,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "DecisionTreeClassifier(class_weight=None, criterion='gini', max_depth=None,\n",
-      "            max_features=None, max_leaf_nodes=None,\n",
-      "            min_impurity_decrease=0.0, min_impurity_split=None,\n",
-      "            min_samples_leaf=1, min_samples_split=2,\n",
-      "            min_weight_fraction_leaf=0.0, presort=False, random_state=None,\n",
-      "            splitter='best')\n"
-     ]
+     "data": {
+      "text/plain": [
+       "DecisionTreeClassifier()"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "from sklearn.tree import DecisionTreeClassifier as DT\n",
     "\n",
-    "model = DT()\n",
-    "\n",
-    "print(model)"
+    "model = DT()"
    ]
   },
   {
@@ -908,7 +880,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### *Esercizio 5*\n",
+    "### *Esercizio 4*\n",
     "\n",
     "Provare a ripetere quanto visto per KNN, validando la profondità massima (*max_depth*) di un albero di decisione."
    ]
@@ -927,7 +899,7 @@
     "</script>\n",
     "\n",
     "<footer id=\"attribution\" style=\"float:right; color:#999; background:#fff;\">\n",
-    "Created with Jupyter, delivered by Fastly, rendered by Rackspace.\n",
+    "Created with Jupyter.\n",
     "</footer>"
    ]
   }
